[workspace]
members = [
    "compiler/fol-types",
    "compiler/fol-stream",
    "compiler/fol-lexer",
    "compiler/fol-parser",
    "compiler/fol-package",
    "compiler/fol-diagnostics",
    "compiler/fol-resolver",
    "compiler/fol-typecheck",
    "compiler/fol-lower",
    "compiler/fol-intrinsics",
    "execution/fol-runtime",
    "execution/fol-backend",
    "tooling/fol-frontend",
]

[package]
name = "fol"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"

[[bin]]
name = "fol"
path = "src/main.rs"

[dependencies]
fol-types = { path = "compiler/fol-types" }
fol-stream = { path = "compiler/fol-stream" }
fol-lexer = { path = "compiler/fol-lexer" }
fol-parser = { path = "compiler/fol-parser" }
fol-package = { path = "compiler/fol-package" }
fol-diagnostics = { path = "compiler/fol-diagnostics" }
fol-resolver = { path = "compiler/fol-resolver" }
fol-typecheck = { path = "compiler/fol-typecheck" }
fol-lower = { path = "compiler/fol-lower" }
fol-intrinsics = { path = "compiler/fol-intrinsics" }
fol-frontend = { path = "tooling/fol-frontend" }
fol-backend = { path = "execution/fol-backend" }
regex = "1"
colored = "1"
dyn-clone = "1"
terminal_size = "0.1.16"
lazy_static = "1.4.0"
clap = { version = "4.0", features = ["derive"] }

[[test]]
name = "integration"
path = "test/run_tests.rs"

[dev-dependencies]
serde_json = "1"
