[workspace]
members = [
    "lang/compiler/fol-types",
    "lang/compiler/fol-stream",
    "lang/compiler/fol-lexer",
    "lang/compiler/fol-parser",
    "lang/compiler/fol-package",
    "lang/compiler/fol-diagnostics",
    "lang/compiler/fol-resolver",
    "lang/compiler/fol-typecheck",
    "lang/compiler/fol-lower",
    "lang/compiler/fol-intrinsics",
    "lang/execution/fol-runtime",
    "lang/execution/fol-backend",
    "lang/tooling/fol-frontend",
]

[package]
name = "fol"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"

[[bin]]
name = "fol"
path = "lang/tooling/fol-frontend/src/main.rs"

[dependencies]
fol-types = { path = "lang/compiler/fol-types" }
fol-stream = { path = "lang/compiler/fol-stream" }
fol-lexer = { path = "lang/compiler/fol-lexer" }
fol-parser = { path = "lang/compiler/fol-parser" }
fol-package = { path = "lang/compiler/fol-package" }
fol-diagnostics = { path = "lang/compiler/fol-diagnostics" }
fol-resolver = { path = "lang/compiler/fol-resolver" }
fol-typecheck = { path = "lang/compiler/fol-typecheck" }
fol-lower = { path = "lang/compiler/fol-lower" }
fol-intrinsics = { path = "lang/compiler/fol-intrinsics" }
fol-frontend = { path = "lang/tooling/fol-frontend" }
fol-backend = { path = "lang/execution/fol-backend" }
regex = "1"
colored = "1"
dyn-clone = "1"
terminal_size = "0.1.16"
lazy_static = "1.4.0"
clap = { version = "4.0", features = ["derive"] }

[[test]]
name = "integration"
path = "test/run_tests.rs"

[dev-dependencies]
serde_json = "1"
