[workspace]
members = [
    "lang/compiler/fol-types",
    "lang/compiler/fol-stream",
    "lang/compiler/fol-lexer",
    "lang/compiler/fol-parser",
    "lang/compiler/fol-package",
    "lang/compiler/fol-diagnostics",
    "lang/compiler/fol-resolver",
    "lang/compiler/fol-typecheck",
    "lang/compiler/fol-lower",
    "lang/compiler/fol-intrinsics",
    "lang/execution/fol-build",
    "lang/execution/fol-runtime",
    "lang/execution/fol-backend",
    "lang/tooling/fol-frontend",
    "lang/tooling/fol-editor",
]

[package]
name = "fol"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"

[[bin]]
name = "fol"
path = "lang/tooling/fol-frontend/src/main.rs"

[dependencies]
fol-frontend = { path = "lang/tooling/fol-frontend" }

[[test]]
name = "integration"
path = "test/run_tests.rs"

[dev-dependencies]
fol-types = { path = "lang/compiler/fol-types" }
fol-stream = { path = "lang/compiler/fol-stream" }
fol-lexer = { path = "lang/compiler/fol-lexer" }
fol-parser = { path = "lang/compiler/fol-parser" }
fol-package = { path = "lang/compiler/fol-package" }
fol-diagnostics = { path = "lang/compiler/fol-diagnostics" }
fol-resolver = { path = "lang/compiler/fol-resolver" }
fol-typecheck = { path = "lang/compiler/fol-typecheck" }
fol-intrinsics = { path = "lang/compiler/fol-intrinsics" }
fol-editor = { path = "lang/tooling/fol-editor" }
fol-runtime = { path = "lang/execution/fol-runtime" }
serde_json = "1"
