[package]
name = "fol-backend"
version = "0.1.0"
edition = "2021"
description = "Backend code generation crate for executable FOL V1 programs"

[lib]
name = "fol_backend"
path = "src/lib.rs"

[dependencies]
fol-intrinsics = { path = "../fol-intrinsics" }
fol-lower = { path = "../fol-lower" }
fol-parser = { path = "../fol-parser" }
fol-resolver = { path = "../fol-resolver" }
fol-runtime = { path = "../fol-runtime" }
