[package]
name = "fol-package"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"
description = "Package discovery and acquisition for FOL language"

[dependencies]
fol-diagnostics = { path = "../fol-diagnostics" }
fol-parser = { path = "../fol-parser" }
fol-types = { path = "../fol-types" }
