[package]
name = "fol-lower"
version = "0.1.4"
edition = "2021"

[lib]
name = "fol_lower"
path = "src/lib.rs"

[dependencies]
fol-diagnostics = { path = "../fol-diagnostics" }
fol-intrinsics = { path = "../fol-intrinsics" }
fol-parser = { path = "../fol-parser" }
fol-resolver = { path = "../fol-resolver" }
fol-typecheck = { path = "../fol-typecheck" }

[dev-dependencies]
fol-lexer = { path = "../fol-lexer" }
fol-package = { path = "../fol-package" }
fol-stream = { path = "../fol-stream" }
