[package]
name = "fol-parser"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"

[dependencies]
fol-types = { path = "../fol-types" }
fol-stream = { path = "../fol-stream" }
fol-lexer = { path = "../fol-lexer" }
fol-diagnostics = { path = "../fol-diagnostics" }
dyn-clone = "1.0"
colored = "1.9"
