[package]
name = "fol-typecheck"
version = "0.1.4"
edition = "2021"

[lib]
name = "fol_typecheck"
path = "src/lib.rs"

[dependencies]
fol-diagnostics = { path = "../fol-diagnostics" }
fol-intrinsics = { path = "../fol-intrinsics" }
fol-parser = { path = "../fol-parser" }
fol-resolver = { path = "../fol-resolver" }
fol-types = { path = "../fol-types" }
