[package]
name = "fol-build"
version = "0.1.4"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2021"
description = "Build system execution for FOL language"

[dependencies]
fol-diagnostics = { path = "../../compiler/fol-diagnostics" }
fol-lexer = { path = "../../compiler/fol-lexer" }
fol-parser = { path = "../../compiler/fol-parser" }
fol-stream = { path = "../../compiler/fol-stream" }

[dev-dependencies]
