[package]
name = "enumeq"
version = "0.1.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^0.4.8"
quote = "^0.6.3"
syn = "^0.14.4"

[lib]
proc-macro = true
